--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-native": "0.76.9",
     "react-native-screens": "~4.4.0",
     "react-native-video": "^6.13.0",
-    "expo-av": "~15.0.2"
+    "expo-av": "~15.0.2",
+    "expo-updates": "~0.27.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
