--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/native-stack": "^7.3.10",
     "expo": "~52.0.46",
+    "expo-av": "~15.0.2",
     "expo-status-bar": "~2.0.1",
+    "expo-updates": "~0.27.4",
     "react": "18.3.1",
     "react-native": "0.76.9",
+    "react-native-calendars": "^1.1311.1",
     "react-native-screens": "~4.4.0",
-    "react-native-video": "^6.13.0",
-    "expo-av": "~15.0.2",
-    "expo-updates": "~0.27.4"
+    "react-native-video": "^6.13.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
